haskell-devscripts (0.7.2) UNRELEASED; urgency=low

  * Dh_Haskell.sh: Remove unused variable.
  * Dh_Haskell.sh: Remove packages without hash-id from the list.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 12 Feb 2010 13:39:17 -0200

haskell-devscripts (0.7.1) unstable; urgency=low

  * Remove package config from source tree root
  * Bump standards version

 -- Joachim Breitner <nomeata@debian.org>  Fri, 12 Feb 2010 11:47:53 +0100

haskell-devscripts (0.7) unstable; urgency=low

  [ Marco Túlio Gontijo e Silva ]
  * debian/control: Add haddock and hscolour as Dependencies:.

 -- Joachim Breitner <nomeata@debian.org>  Wed, 10 Feb 2010 12:39:56 +0100

haskell-devscripts (0.6.19) experimental; urgency=low

  [ Kari Pahula ]
  * Install Haddock files to /usr/lib/ghc-$VER/haddock/$PKG-$VER
  * Use --builddir Cabal option instead of shuffling dist/ dirs around
  * Remove postinst/prerm scripts
  * Put package.conf into package.conf.d

  [ Joachim Breitner ]
  * Remove dh_haskell_prep, not needed any more (Closes: #516414)
  * Create dh_haskell_provides, to create a ${haskell:Provides} substvar
    containing a string derived from the cabal package name, version and ABI
    hash.
  * Depend on the virtual package names provided by dh_haskell_provides, if
    dpkg knows about them. (Closes: #518308, #507912)
  * Bump ghc6 dependency to (>= 6.12)

 -- Joachim Breitner <nomeata@debian.org>  Thu, 28 Jan 2010 22:45:23 +0100

haskell-devscripts (0.6.18) unstable; urgency=low

  * dh_haskell_prep: Allow spaces before : in cabal fields.

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Mon, 09 Nov 2009 14:44:32 -0200

haskell-devscripts (0.6.17) unstable; urgency=low

  * hlibrary.mk: Allow spaces before : in cabal fields.
  * Remove unsuported packaging scripts, leaving only the standard
    hlibrary.mk.  Closes: #520703, #543776.

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Sun, 08 Nov 2009 16:55:31 -0200
