@@ -2,6 +2,8 @@ haskell-devscripts (0.7.2) UNRELEASED; urgency=low
 
   * Dh_Haskell.sh: Remove unused variable.
   * Dh_Haskell.sh: Remove packages without hash-id from the list.
+  * Dh_Haskell.sh: Treat haskell-package dependencies that doesn't need
+    a Debian-package.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 12 Feb 2010 13:39:17 -0200
 
